--- a/home/asset/clean-blog.css
+++ b/home/asset/clean-blog.css
@@ -264,7 +264,7 @@ hr.small {
   border-bottom-left-radius: 5px;
 }
 footer {
-  padding: 50px 0 65px;
+  padding: 30px 0 20px 0;
 }
 footer .list-inline {
   margin: 0;
